docs/0.18/_sources/api/gammapy.modeling.models.TemplateSpatialModel.rst.txt
TemplateSpatialModel
====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemplateSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemplateSpatialModel.covariance
      ~TemplateSpatialModel.default_parameters
      ~TemplateSpatialModel.evaluation_radius
      ~TemplateSpatialModel.frame
      ~TemplateSpatialModel.is_energy_dependent
      ~TemplateSpatialModel.parameters
      ~TemplateSpatialModel.phi_0
      ~TemplateSpatialModel.position
      ~TemplateSpatialModel.position_error
      ~TemplateSpatialModel.tag
      ~TemplateSpatialModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemplateSpatialModel.__call__
      ~TemplateSpatialModel.copy
      ~TemplateSpatialModel.create
      ~TemplateSpatialModel.evaluate
      ~TemplateSpatialModel.evaluate_geom
      ~TemplateSpatialModel.from_dict
      ~TemplateSpatialModel.from_parameters
      ~TemplateSpatialModel.integrate_geom
      ~TemplateSpatialModel.plot
      ~TemplateSpatialModel.plot_error
      ~TemplateSpatialModel.plot_grid
      ~TemplateSpatialModel.plot_interative
      ~TemplateSpatialModel.read
      ~TemplateSpatialModel.to_dict
      ~TemplateSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interative
   .. automethod:: read
   .. automethod:: to_dict
   .. automethod:: to_region
